--- a/css/style.css
+++ b/css/style.css
@@ -20,13 +20,14 @@ a {
 }
 
 header{
-    background-color: black;
+    background-color: rgba(255,170,170, 1);
 }
 
 header .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 20px;
     height: 85px;
     margin: auto;
 }
@@ -48,7 +49,7 @@ header nav ul li a:hover{
 }
 
 header img{
-    height: 72px;
+    height: 78px;
 }
 
 #checkbox-menu{
